# MlToBytecode

./: .gitignore  README.md  ast_loc.ml  ast_typ.ml  compilation.tex  dune  instructions.odg  ir.ml  ir_simulator.ml  lexer.mll  location.ml  main.ml  memory.odg  parser.mly  pp.ml  semantic.tex  stack.odg  to_bytecode.ml  to_ir.ml  typechecking.ml
tests/: test.bc  test.ml
vm/: CMakeLists.txt  main.cpp  vm.cpp  vm.hpp
